# bouncy-blobs

./: .env.example  .gitignore  .vercelignore  AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/: Cargo.toml  README.md
crates/softbody/: Cargo.toml  build.rs
crates/softbody-wasm/: Cargo.toml
crates/softbody-wasm/src/: lib.rs
crates/softbody/src/: actions.rs  collision.rs  constraints.rs  dynamic_items.rs  fx.rs  game_logic_tests.rs  game_mode.rs  layers.rs  lib.rs  math.rs  rng.rs  shape_matching.rs  snapshot.rs  spikes.rs  spring_pads.rs  triggers.rs  tuning.rs  types.rs  world.rs
docs/: AppStoreAssets.md  KidsVoice.md  MobileAttestation.md  MobileRelease.md  ReleaseChecklist.md  Story.md
godot/: AGENTS.md  Lobby.gd  Lobby.gd.uid  MobileInput.gd  MobileInput.gd.uid  game.gd  game.gd.uid  game.tscn  icon.svg.import  main_menu.gd  main_menu.gd.uid  main_menu.tscn  mobile_controls.gd  mobile_controls.gd.uid  project.godot  slime_blob.gd  slime_blob.gd.uid  slime_blob.tscn  slime_springs.tscn  softbody_playground.gd  softbody_playground.gd.uid  softbody_playground.tscn  test.gd  test.gd.uid  test.tscn
godot/net/: supabase_rest.gd  supabase_rest.gd.uid  webrtc_supabase_network.gd  webrtc_supabase_network.gd.uid
godot/reference/: WEBRTC_GODOT.md  softbody-js-spec.md
godot/soft/: collision_soft.gd  collision_soft.gd.uid  constraints_soft.gd  constraints_soft.gd.uid  hull_presets.gd  hull_presets.gd.uid  shape_matching.gd  shape_matching.gd.uid  soft_body_world.gd  soft_body_world.gd.uid  soft_collision_shape_util.gd  soft_collision_shape_util.gd.uid  soft_level_collision_sync.gd  soft_level_collision_sync.gd.uid  softbody_gameplay_tuning.gd  softbody_gameplay_tuning.gd.uid
marketing/: README.md
marketing/steam-assets/: README.md  package.json  render.ts  tsconfig.json  vite.config.ts
playwright/: ai-content.spec.ts  chain-demo.spec.ts  cross-tab-determinism.spec.ts  editor-touch.spec.ts  end-game.spec.ts  frame-perf.spec.ts  guest-sync.spec.ts  home-sandbox-rust.spec.ts  host-flow.spec.ts  koth-moving-hill.spec.ts  lobby-browser-code.spec.ts  lobby-discovery.spec.ts  lobby-helpers.ts  lobby-start-bootstrap.spec.ts  lobby-start-determinism.spec.ts  match-short.spec.ts  navigation.spec.ts  netpeer-determinism.spec.ts  phone-controller.spec.ts  play-mode.spec.ts  rope-test.spec.ts  rust-engine.spec.ts  sim-exactness.spec.ts  snap-diagnostic.spec.ts
public/campaigns/: play.json
public/intro/: manifest.json
public/levels/: blob-hill.json  cannon.json  ceiling-crawl.json  chained-climb.json  chained.json  classic.json  crush-test.json  default.json  det-test.json  getting-crushed.json  gravity-drive.json  jump.json  kids-playground.json  koth-moving-test.json  manifest.json  moving-platforms.json  platforms-be-movin.json  playground.json  (+9 more)
scripts/: generate-all-art.sh  generate-all-sfx.sh  generate-kids-voice.py  generate-kids-voice.sh  ios-upload-testflight.sh  publish-itch.sh  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  maps.rs  steam.rs  steam_lobby.rs  steam_net.rs
steam-assets/: .gitignore  README.md  build-copy.ts  index.html  package.json  pnpm-lock.yaml  render.ts  vite.config.ts
vite/: devMapsPlugin.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+462 files in other folders)
