[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

# `steam` pulls in the steamworks SDK and the whole desktop Steam layer
# (Workshop, Steam Networking, Steam lobbies). It is OFF by default because the
# steamworks crate cannot compile or link for iOS/Android, and the Tauri mobile
# CLI (`tauri ios/android dev|build`) has no `--no-default-features` flag — so
# the only reliable way to keep Steam out of the mobile build is to make it
# opt-in. Desktop builds enable it explicitly: `tauri dev/build -f steam`
# (see the tauri:dev / tauri:build npm scripts). Mobile builds pass no feature.
[features]
default = []
steam = ["dep:steamworks"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
steamworks = { version = "0.11", optional = true }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
