[package]
name = "softbody-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "wasm-bindgen surface for the softbody crate."

[lib]
name = "softbody_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
softbody = { path = "../softbody", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
